ticket refund function finished
