# public-transport-rest-contract/src/main/resources/openapi.yml
@@ -65,6 +65,68 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /tickets/validate/{userId}:
+    get:
+      tags:
+        - ticket
+      summary: Get all tickets of user for validation
+      operationId: getUserTicketsByIdToValidate
+      description: Get all tickets of user for validation.
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          description: user id
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Get all tickets which are belong to a specific user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Ticket'
+        '404':
+          description: User not found!
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /tickets/refund/{userId}:
+    get:
+      tags:
+        - ticket
+      summary: Get all tickets of user which are refundable
+      operationId: getUserTicketsByIdToRefund
+      description: Get all tickets of user to refund.
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          description: user id
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Get all tickets which are belong to a specific user to refund
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Ticket'
+        '404':
+          description: User not found!
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /tickets/purchaseTicket:
     post:
       tags:
